.node_modules/syntax-error/test/sources/shebang.js
#!/usr/bin/env node
console.log('foo');
